# ti-omap3-sgx-wayland-wsegl

./: Makefile  Makefile.am  README  config.h  configure  configure.ac
src/common/: Makefile  wayland-sgx-client-protocol.h  wayland-sgx-protocol.c  wayland-sgx-server-protocol.h  wayland-sgx.xml
src/libegl/: Makefile
src/libwayland-egl/: Makefile
src/wsegl/: Makefile  waylandwsegl.c
